# video-metrics-bot

./: .gitignore  README.md  main.py  pyproject.toml
infra/: .env  docker-compose.yml
sql/: 00_drop.sql  01_schema.sql
src/bot/: handlers.py  main_bot.py  routers.py  utils.py
src/config/: config.py
src/db/: conn.py  init_db.py  query.py
src/models/: intent.py
src/schemas/: intent.py
src/service/: executor.py  query_interpreter.py  render_template.py
src/templates/: instruction.md.jinja2
