[project]
name = "video-metrics-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.8",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
